# ine.statScraper

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
src/ops/: countfiles.py  loadtodatabase.py  missing.py  standardize.py
src/scraper/: ine_scraper.py
src/utils/: expectedfiles.py  logger.py
